fix: fixed reponsiveness issues on mobile view

--- a/src/profile-v2/index.scss
+++ b/src/profile-v2/index.scss
@@ -151,6 +151,9 @@
   max-width: 32em;
 }
 
+.max-width-19rem{
+    max-width: 19rem;
+}
 .width-75rem {
   width: 75rem;
 }
